--- a/index.html
+++ b/index.html
@@ -28,4 +28,8 @@
         
     <script src="app.js"></script>
     <script src="scripts/controllers/SampleFormController.js"></script>
+    <script src="scripts/services/SharedService.js"></script>
+    <!--<script src="scripts/directives/formDirective.js"></script>
+    <script src="scripts/directives/sampleDirective.js"></script>
+    <script src="scripts/controllers/FormsControllers.js"></script>-->
 </html>
